Fixed grant card height and overflow text

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -167,6 +167,12 @@
 	}
 }
 
+.cardtext{
+	height:$base-line-height*4;
+	overflow:hidden;
+	text-overflow:ellipsis; 
+	}
+
 .userdropdown{
 	background: #fff;
 	position:absolute;
